# jobclass

./: .env.example  .gitignore  404.html  CLAUDE.md  CNAME  Dockerfile  README.md  docker-compose.yml  index.html  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
api/: geographies.json  health.json  metadata.json  stats.json
api/cpi/: search.json
api/methodology/: sources.json  validation.json
api/occupations/: 11-0000.json  11-1000.json  11-1010.json  11-1011.json  11-1020.json  11-1021.json  11-1030.json  11-1031.json  11-2000.json  11-2010.json  11-2011.json  11-2020.json  11-2021.json  11-2022.json  11-2030.json  11-2032.json  11-2033.json  11-3000.json  11-3010.json  11-3012.json  11-3013.json  11-3020.json  11-3021.json  11-3030.json  11-3031.json  11-3050.json  11-3051.json  11-3060.json  11-3061.json  11-3070.json  11-3071.json  11-3110.json  11-3111.json  11-3120.json  11-3121.json  11-3130.json  11-3131.json  11-9000.json  (+1411 more)
config/: source_manifest.yaml
cpi/: index.html
docs/: sample_queries.sql  schema.md
hierarchy/: index.html
lessons/: index.html
methodology/: index.html
migrations/: 001_create_run_manifest.sql  002_soc_staging_and_warehouse.sql  003_oews_staging_and_warehouse.sql  004_onet_staging_and_warehouse.sql  005_analyst_marts.sql  006_employment_projections.sql  007_time_series_dimensions.sql  008_time_series_facts.sql  009_time_series_marts.sql  010_work_activities.sql  011_education_training.sql  012_technology_skills.sql  013_price_index.sql  014_soc_crosswalk.sql  015_cpi_expansion.sql
pipeline/: index.html
scripts/: build_static.py  deploy_pages.py
search/: index.html
tests/: conftest.py
trends/: index.html
(+34045 files in other folders)
