[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jobclass"
version = "0.1.0"
description = "Labor Market Occupation Pipeline"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "openpyxl>=3.1",
    "pandas>=2.2",
    "pytz>=2024.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "jinja2>=3.1",
]

[project.scripts]
jobclass-pipeline = "jobclass.cli:main"
jobclass-web = "jobclass.web.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src/jobclass"]
